// Global configuration options for Consul.
syntax = "proto2";

package cloudprober.rds.consul;

option go_package = "github.com/cloudprober/cloudprober/internal/rds/consul/proto";

// GlobalOptions configures Consul settings that can be shared across
// both targets and surfacers.
message GlobalOptions {
  // Consul server address (hostname:port)
  // Default: "localhost:8500"
  optional string address = 1 [default = "localhost:8500"];

  // Consul datacenter
  optional string datacenter = 2;

  // Consul authentication token
  // Can also be set via CONSUL_HTTP_TOKEN environment variable
  optional string token = 3;

  // TLS configuration for connecting to Consul
  optional TLSConfig tls = 4;

  // Kubernetes service discovery for Consul address
  optional KubernetesServiceConfig kubernetes_service = 5;
}

message TLSConfig {
  optional string ca_file = 1;
  optional string cert_file = 2;
  optional string key_file = 3;
  optional bool insecure_skip_verify = 4 [default = false];
}

message KubernetesServiceConfig {
  optional string namespace = 1 [default = "default"];
  optional string service_name = 2 [default = "consul"];
  optional string port = 3 [default = "8500"];
}
